--- a/.gitignore
+++ b/.gitignore
@@ -20,17 +20,23 @@ yarn-error.log*
 *.sln
 *.sw?
 
-#amplify
+#amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
-amplify/backend/awscloudformation
+amplify/backend/.temp
 build/
 dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
 amplify-gradle-config.json
-amplifyxc.config
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
